// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Repository should filter and select suggestions based on name 1`] = `
[
  "primer/react",
  "facebook/react",
]
`;

exports[`Repository should filter and select suggestions when added in the start of multiple values 1`] = `
[
  "facebook/react",
]
`;
